[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/scenes/UI/CharacterInfoMenu2.gd" type="Script" id=1]
[ext_resource path="res://src/assets/menuimages/GUIPack_byJanaChumi/Orange/btn (1).png" type="Texture" id=2]
[ext_resource path="res://src/assets/menuimages/GUIPack_byJanaChumi/Grey/btn (12).png" type="Texture" id=3]
[ext_resource path="res://src/assets/menuimages/GUIPack_byJanaChumi/greenPortraitBg.png" type="Texture" id=4]
[ext_resource path="res://src/assets/menuimages/GUIPack_byJanaChumi/panelCloud (1).png" type="Texture" id=5]
[ext_resource path="res://src/assets/menuimages/characterimages/FE Celica.png" type="Texture" id=6]
[ext_resource path="res://src/assets/menuimages/GUIPack_byJanaChumi/Red/btn (12).png" type="Texture" id=7]
[ext_resource path="res://src/assets/menuimages/GUIPack_byJanaChumi/Orange/btn (12).png" type="Texture" id=8]
[ext_resource path="res://src/assets/fonts/JmharkhamRegular-KnPy.otf" type="DynamicFontData" id=9]
[ext_resource path="res://src/assets/menuimages/GUIPack_byJanaChumi/panel (2).png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 25
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 9 )

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="MintBackground" type="Sprite" parent="."]
position = Vector2( 928.362, 91.3324 )
scale = Vector2( 0.488297, 0.491122 )
texture = ExtResource( 4 )
centered = false

[node name="CloudPanel" type="Sprite" parent="."]
position = Vector2( 940.373, 152.95 )
scale = Vector2( 0.503203, 0.571214 )
texture = ExtResource( 5 )
centered = false

[node name="StatPanel" type="Sprite" parent="."]
position = Vector2( 974.964, 443.682 )
scale = Vector2( 0.497846, 0.401389 )
texture = ExtResource( 10 )
centered = false

[node name="Character" type="Sprite" parent="."]
position = Vector2( 1119.27, 303.657 )
scale = Vector2( 0.091361, 0.0813235 )
texture = ExtResource( 6 )

[node name="ExitButton" type="TextureButton" parent="."]
margin_left = 1229.47
margin_top = 105.667
margin_right = 1267.47
margin_bottom = 145.667
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowStatsButton" type="TextureButton" parent="."]
margin_left = 981.956
margin_top = 401.237
margin_right = 1131.95
margin_bottom = 438.237
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="TextureButton" parent="."]
margin_left = 1243.56
margin_top = 454.68
margin_right = 1275.56
margin_bottom = 486.68
rect_rotation = -0.888884
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviousButton" type="TextureButton" parent="."]
margin_left = 936.112
margin_top = 454.68
margin_right = 968.112
margin_bottom = 486.68
rect_rotation = -0.888884
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Legend" type="RichTextLabel" parent="."]
margin_left = 999.761
margin_top = 356.479
margin_right = 1122.76
margin_bottom = 406.478
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Legend"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LegendName" type="RichTextLabel" parent="."]
margin_left = 1024.42
margin_top = 397.787
margin_right = 1139.42
margin_bottom = 441.787
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Celica"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatList" type="RichTextLabel" parent="."]
margin_left = 981.945
margin_top = 468.011
margin_right = 1217.94
margin_bottom = 751.011
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Health Points (HP):        |
Strength (STR):        | 
Vitality (VIT):        | 
Charisma (CHR):        | 
Confidence (CON):        | 
Dexterity (DEX):        | 
Speed (SPD):        |
Charged Action: N/A 
Held Action: N/A "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Base&Current" type="RichTextLabel" parent="."]
margin_left = 1135.53
margin_top = 420.973
margin_right = 1278.53
margin_bottom = 479.973
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "     Stats
Base | Current"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseHP2" type="RichTextLabel" parent="."]
margin_left = 1114.11
margin_top = 469.647
margin_right = 1153.11
margin_bottom = 498.647
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0.466667, 0.117647, 1 )
text = "2000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentHP2" type="RichTextLabel" parent="."]
margin_left = 1160.06
margin_top = 469.647
margin_right = 1211.06
margin_bottom = 493.647
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0.0117647, 0.862745, 0.227451, 1 )
text = "2000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseSTR2" type="RichTextLabel" parent="."]
margin_left = 1092.0
margin_top = 494.0
margin_right = 1143.0
margin_bottom = 518.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0.541176, 0, 0, 1 )
text = "2000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentSTR2" type="RichTextLabel" parent="."]
margin_left = 1140.0
margin_top = 494.0
margin_right = 1195.0
margin_bottom = 518.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0.913725, 0.00392157, 0.00392157, 1 )
text = "2000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseVIT2" type="RichTextLabel" parent="."]
margin_left = 1075.0
margin_top = 518.0
margin_right = 1123.0
margin_bottom = 542.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0.454902, 0.282353, 1 )
text = "2000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentVIT2" type="RichTextLabel" parent="."]
margin_left = 1123.13
margin_top = 518.416
margin_right = 1180.13
margin_bottom = 542.416
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0.878431, 0.545098, 1 )
text = "2000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseCHR2" type="RichTextLabel" parent="."]
margin_left = 1099.0
margin_top = 542.0
margin_right = 1145.0
margin_bottom = 566.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0.172549, 0, 0.596078, 1 )
text = "2000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentCHR2" type="RichTextLabel" parent="."]
margin_left = 1148.0
margin_top = 542.0
margin_right = 1208.0
margin_bottom = 566.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0.478431, 0.270588, 0.988235, 1 )
text = "2000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseCON2" type="RichTextLabel" parent="."]
margin_left = 1106.0
margin_top = 566.0
margin_right = 1161.0
margin_bottom = 590.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0.639216, 0, 0.615686, 1 )
text = "2000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentCON2" type="RichTextLabel" parent="."]
margin_left = 1153.0
margin_top = 566.0
margin_right = 1217.0
margin_bottom = 590.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 1, 0, 0.964706, 1 )
text = "2000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseDEX2" type="RichTextLabel" parent="."]
margin_left = 1099.0
margin_top = 589.0
margin_right = 1156.0
margin_bottom = 613.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0.458824, 0.266667, 0, 1 )
text = "2000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentDEX2" type="RichTextLabel" parent="."]
margin_left = 1145.0
margin_top = 590.0
margin_right = 1199.0
margin_bottom = 614.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 1, 0.584314, 0.0117647, 1 )
text = "2000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseSPD2" type="RichTextLabel" parent="."]
margin_left = 1076.27
margin_top = 613.438
margin_right = 1121.27
margin_bottom = 641.438
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0.247059, 0.396078, 1 )
text = "2000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentSPD2" type="RichTextLabel" parent="."]
margin_left = 1122.0
margin_top = 613.0
margin_right = 1168.0
margin_bottom = 640.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0.623529, 1, 1 )
text = "2000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Window" type="VBoxContainer" parent="."]
visible = false
margin_left = 927.138
margin_top = 4.02158
margin_right = 1282.14
margin_bottom = 602.022
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopMargin" type="Label" parent="Window"]
margin_right = 355.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 35 )

[node name="Header" type="Label" parent="Window"]
margin_top = 39.0
margin_right = 355.0
margin_bottom = 111.0
rect_min_size = Vector2( 0, 72 )
text = "Character Info Menu"
align = 1
valign = 1

[node name="Panel" type="VBoxContainer" parent="Window"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 115.0
margin_right = 355.0
margin_bottom = 559.0
size_flags_vertical = 3

[node name="Character" type="VBoxContainer" parent="Window/Panel"]
margin_right = 355.0
margin_bottom = 108.0
size_flags_vertical = 3

[node name="VBoxContainer4" type="VBoxContainer" parent="Window/Panel"]
margin_top = 112.0
margin_right = 355.0
margin_bottom = 220.0
size_flags_vertical = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="Window/Panel"]
margin_top = 224.0
margin_right = 355.0
margin_bottom = 332.0
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="Window/Panel"]
margin_top = 336.0
margin_right = 355.0
margin_bottom = 444.0
size_flags_vertical = 3

[node name="BottomMargin" type="Label" parent="Window"]
margin_top = 563.0
margin_right = 355.0
margin_bottom = 598.0
rect_min_size = Vector2( 0, 35 )
